# MAVROS-Autonomous

./: README.md
ros2_ws/: .gitignore
ros2_ws/src/livox_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/livox_msgs/msg/: CustomMsg.msg  CustomPoint.msg
ros2_ws/src/livox_ros_driver2/launch_ROS2/: rviz_MID360_launch.py
ros2_ws/src/mavros/mavros/: CMakeLists.txt
ros2_ws/src/mavros/mavros/launch/: apmMin.launch  apmMinSITL.launch  apmSITL.launch  apm_minplugin.yaml
ros2_ws/src/mavros/mavros/scripts/: CTestConfiguration.ini  CTestTestfile.cmake  auto_script.py  cmake_install.cmake  gps_onerecv.py  gps_recv.py  load_coords.py  mainTest.py  mav.parm  mav.tlog  mav.tlog.raw  mission_waypoints.html  ros_utils.py  ros_utils_jetson.py  smallTest.py  stream_rate_startup.bash  waypoints.json  wget-log
ros2_ws/src/mavros/mavros/scripts/ament_cmake_core/: mavrosConfig.cmake  package.cmake
ros2_ws/src/mavros/mavros/scripts/ament_cmake_environment_hooks/: local_setup.sh
ros2_ws/src/mavros/mavros/scripts/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
ros2_ws/src/mavros/mavros/scripts/gmock/: CTestTestfile.cmake  cmake_install.cmake
ros2_ws/src/mavros/mavros/scripts/gtest/: CTestTestfile.cmake  (+1 more)
ros2_ws/src/pointcloud_to_laserscan/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros2_ws/src/pointcloud_to_laserscan/include/pointcloud_to_laserscan/: laserscan_to_pointcloud_node.hpp  pointcloud_to_laserscan_node.hpp
ros2_ws/src/pointcloud_to_laserscan/src/: pointcloud_to_laserscan_node.cpp
ros2_ws/src/ros2_ws/: frames_2025-09-30_14.19.59.gv  test.bash
(+56 files in other folders)
