<?xml version="1.0"?>
<package format="3">
  <name>livox_msgs</name>
  <version>0.0.1</version>
  <description>Livox message definitions for Livox ROS driver</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
